resources/css/avans.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;900&display=swap');

body {
  overflow-x: hidden;
}

.avans-menu-logo {
  height: 45px;
  max-width: initial;
}

.avans-menu {
  background-color: rgb(198, 0, 42);
  display: flex;
  justify-content: space-between;
  position: absolute;
  width: 100vw;
  z-index: 1;
  font-size: 1.2em;
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
  transition: font-size 0.5s;
}

.avans-menu ul {
  display: flex;
  margin: 0;
  padding: 0;
  list-style: none;
}

.avans-menu ul a {
  display: inline-block;
  padding: 25px 30px;
  transform: skew(-11deg);
  flex-grow: 1;
  text-align: center;
  margin: 0 2px;
  color: white;
  text-decoration: none;
  transition: padding 0.5s, background-color 0.3s;
}

.avans-menu .avans-mail-dropdown a {
  transition: background-color 0.3s;
}

.avans-menu ul a li {
  display: block;
  transform: skew(11deg);
}

.avans-menu a:hover {
  background-color: rgb(0, 0, 42);
  color: white;
}

.avans-menu:hover ul a {
  padding: 40px 30px;
}

.avans-menu-user {
  text-decoration: none;
  color: white;
  display: flex;
  align-items: center;
  padding: 0 100px;
}

.avans-menu-logo-container {
  text-decoration: none;
  color: white;
  display: flex;
  align-items: center;
  padding: 0 100px;
}

.avans-split-background {
  overflow: hidden;
  background-color: rgb(242, 242, 242);
  width: 100vw;
  height: 100vh;
  z-index: -1;
  margin-left: -50vw;
  transform: skew(-11deg);
  position: fixed;
  transition: transform 0.5s, margin-left 0.5s;
}

.avans-split {
  padding: 30px 100px;
  box-sizing: border-box;
  width: 100vw;
  display: flex;
  animation: fade-in 1s;
  justify-content: space-between;
}

.avans-split div:last-child {
  text-align: right;
}

.avans-red {
  color: rgb(198, 0, 42);
}

.avans-h1 {
  font-weight: 900;
  font-size: 5em;
  text-transform: uppercase;
  font-family: 'Roboto', sans-serif;
  transition: font-size 0.5s;
}

.avans-h2 {
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
  font-size: 1.8em;
  transition: font-size 0.5s;
}

.avans-margin-large {
  margin-top: 10vh;
}

.avans-bold {
  text-transform: uppercase;
  font-weight: 900;
}

@keyframes fade-in {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.avans-mail-dropdown {
  position: absolute;
  display: none;
  flex-direction: column;
  overflow: hidden;
}

.avans-mail-dropdown a {
  text-decoration: none;
  background-color: rgb(198, 0, 42);
  color: white;
  padding: 20px 30px;
}

.avans-flex-center {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}

.avans-menu ul a .avans-flex-center {
  display: flex;
}

.avans-scrollbox {
  height: 900px;
  overflow-y: scroll;
  transition: height 0.5s;
}

@media only screen and (max-width: 1920px) {
  .avans-menu-user {
    padding: 0 100px 0 20px;
  }

  .avans-menu-logo-container {
    padding: 0 20px 0 100px;
  }

  .avans-menu {
    font-size: 1.1em;
  }

  .avans-h1 {
    font-size: 4em;
  }

  .avans-h2 {
    font-size: 1.5em;
  }

  .avans-scrollbox {
    height: 650px;
  }
}

@media only screen and (max-width: 1600px) {
  .avans-menu-user {
    padding: 0 30px;
  }

  .avans-menu-logo-container {
    padding: 0 20px;
  }

  .avans-menu ul a {
    padding: 25px 10px;
  }

  .avans-menu:hover ul a {
    padding: 40px 10px;
  }
}

